--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -58,6 +58,8 @@ h4 {
 	left: 0; /* align popover with left edge of it's parent */
 	box-sizing: border-box;
 	z-index: 1; /* ensure popover is above other content */
+
+	margin-top: 0; /* remove gap on top */
 }
 
 .locations:hover > .popover,
